(function() {var implementors = {
"oak_echo_service":[["impl&lt;S: <a class=\"trait\" href=\"oak_echo_service/proto/oak/echo/trait.Echo.html\" title=\"trait oak_echo_service::proto::oak::echo::Echo\">Echo</a>&gt; Transport for <a class=\"struct\" href=\"oak_echo_service/proto/oak/echo/struct.EchoServer.html\" title=\"struct oak_echo_service::proto::oak::echo::EchoServer\">EchoServer</a>&lt;S&gt;"]],
"oak_functions_launcher":[["impl&lt;S: <a class=\"trait\" href=\"oak_functions_launcher/proto/oak/functions/trait.OakFunctions.html\" title=\"trait oak_functions_launcher::proto::oak::functions::OakFunctions\">OakFunctions</a>&gt; <a class=\"trait\" href=\"micro_rpc/trait.Transport.html\" title=\"trait micro_rpc::Transport\">Transport</a> for <a class=\"struct\" href=\"oak_functions_launcher/proto/oak/functions/struct.OakFunctionsServer.html\" title=\"struct oak_functions_launcher::proto::oak::functions::OakFunctionsServer\">OakFunctionsServer</a>&lt;S&gt;"]],
"oak_functions_sdk":[["impl&lt;S: <a class=\"trait\" href=\"oak_functions_sdk/proto/oak/functions/wasm/v1/trait.StdWasmApi.html\" title=\"trait oak_functions_sdk::proto::oak::functions::wasm::v1::StdWasmApi\">StdWasmApi</a>&gt; Transport for <a class=\"struct\" href=\"oak_functions_sdk/proto/oak/functions/wasm/v1/struct.StdWasmApiServer.html\" title=\"struct oak_functions_sdk::proto::oak::functions::wasm::v1::StdWasmApiServer\">StdWasmApiServer</a>&lt;S&gt;"]],
"oak_functions_service":[["impl&lt;S: <a class=\"trait\" href=\"oak_functions_service/proto/oak/functions/trait.OakFunctions.html\" title=\"trait oak_functions_service::proto::oak::functions::OakFunctions\">OakFunctions</a>&gt; <a class=\"trait\" href=\"micro_rpc/trait.Transport.html\" title=\"trait micro_rpc::Transport\">Transport</a> for <a class=\"struct\" href=\"oak_functions_service/proto/oak/functions/struct.OakFunctionsServer.html\" title=\"struct oak_functions_service::proto::oak::functions::OakFunctionsServer\">OakFunctionsServer</a>&lt;S&gt;"]],
"oak_proto_rust":[["impl&lt;S: <a class=\"trait\" href=\"oak_proto_rust/oak/oak_functions/testing/trait.TestModule.html\" title=\"trait oak_proto_rust::oak::oak_functions::testing::TestModule\">TestModule</a>&gt; <a class=\"trait\" href=\"micro_rpc/trait.Transport.html\" title=\"trait micro_rpc::Transport\">Transport</a> for <a class=\"struct\" href=\"oak_proto_rust/oak/oak_functions/testing/struct.TestModuleServer.html\" title=\"struct oak_proto_rust::oak::oak_functions::testing::TestModuleServer\">TestModuleServer</a>&lt;S&gt;"]]
};if (window.register_implementors) {window.register_implementors(implementors);} else {window.pending_implementors = implementors;}})()